INv2-Infra/k8s-prod/ingress.svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: inv2.dev
      http:
        paths:
          - pathType: Prefix
            path: /api/v2/users/?(.*)
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
